[gd_scene load_steps=5 format=3 uid="uid://cij33udeagreb"]

[ext_resource type="Theme" uid="uid://cma8plh8jdkxh" path="res://menus/assets_themes/settings_control_label.tres" id="1_ieltd"]
[ext_resource type="Script" uid="uid://cgco4ytuga28g" path="res://menus/settings/license/license.gd" id="1_ojvsv"]
[ext_resource type="Theme" uid="uid://dvkknqaldhwsk" path="res://menus/assets_themes/button_cancel_general.tres" id="3_hf8la"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojvsv"]
bg_color = Color(0.0235294, 0.172549, 0.239216, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="License" type="CanvasLayer"]
script = ExtResource("1_ojvsv")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
show_behind_parent = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ojvsv")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LicenseTextLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ieltd")
theme_override_font_sizes/font_size = 20

[node name="BackButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_hf8la")
text = "BACK"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
